--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,3 +4,44 @@ body {
     text-align: center;
     color: white;
 }
+
+h1 {
+    font-family: Verdana, sans-serif;
+    font-weight: normal;
+    font-size: 50px;
+    color: white;
+    text-align: center;
+}
+
+h2 {
+    font-family: Verdana, sans-serif;
+    font-weight: 300;
+    font-size: 42px;
+    color: white;
+    text-align: center;
+}
+
+h3 {
+    font-family: Verdana, sans-serif;
+    font-weight: 300;
+    font-size: 42px;
+    color: white;
+    text-align: center;
+}
+
+a {
+    color: aquamarine;
+    font-size: 16px;
+    text-align: center;
+}
+
+footer {
+    text-align: right;
+    color: gray;
+}
+
+.page-text {
+    font-family: verdana, sans-serif;
+    font-size: 21px;
+    color: gray;
+}
